--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {},
   "scripts": {
-    "build": "webpack"
+    "build-min": "webpack --config ./webpack.config.min.js",
+    "build": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
